# measurement-plugin-labview

./: .gitattributes  .gitignore  .gitmodules  CODEOWNERS  CONTRIBUTING.md  Jenkinsfile  README.md  build.toml
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_release_artifacts.yml  ci.yml  pr.yml  run_g_tests.yml  run_pr_commenter.yml  run_vi_analyzer.yml  sync_github_issues_to_azdo.yml
Build Tools/Proto Builds/: Generate Discovery Client.vi  Generate MeasurementLink Server Internal.vi  Generate Pin Map Client.vi  Generate Session Management Client.vi  MeasurementLink Proto Builds.lvlib  MeasurementLink Proto Builds.lvproj
Source/Automation/: Generate Discovery Client.vi  Generate Measurement Server Internal.vi  Generate MeasurementLink Server Internal.vi  Generate Pin Map Client.vi  Generate Session Management Client.vi  Grpc LabVIEW Proto Generator.vi  MeasurementLink Common Proto Generator.vi
Source/Build Specs/: Common gRPC Types.vipb  Measurement Plug-In Examples.vipb  Measurement Plug-In Generator.vipb  Measurement Plug-In SDK Examples.vipb  Measurement Plug-In SDK Generator.vipb  Measurement Plug-In SDK Service.vipb  Measurement Plug-In SDK.vipb  Measurement Plugin SDK.vipb  MeasurementLink Examples.vipb  MeasurementLink Generator.vipb  MeasurementLink Service.vipb  MeasurementLink.vipb  (+1 more)
Source/Protos/ni-apis/.github/check_protos/: _check_protos.py  pyproject.toml
docs/: README.md  Regenerating Server and Client.md  Upgrading measurement services.md  Upgrading to Version 2.0.md
(+8536 files in other folders)
